feat: Major API improvements